--- a/views/article.ejs
+++ b/views/article.ejs
@@ -21,20 +21,13 @@
         <p><%=article.content %></p>
       </div>
       <hr class="my-5" />
-      <div class="pb-4">
-        <form method="post" action="/comentarios">
+      <div>
+        <% if(user){%>
+        <form method="post">
           <div>
             <label for="fullname" class="form-label">Add your comment</label>
-            <input
-              name="fullname"
-              type="text"
-              class="form-control"
-              id="fullname"
-              placeholder="Name"
-              aria-describedby="userName"
-            />
           </div>
-          <div class="form-floating mt-3">
+          <div class="form-floating my-3">
             <textarea
               name="content"
               class="form-control"
@@ -48,6 +41,13 @@
           </div>
           <hr class="my-5" />
         </form>
+        <% } else { %>
+        <div class="d-grid gap-2 my-5">
+          <h5>Inicia sesión para hacer un comentario</h5>
+          <a class="btn btn-primary" href="/login">Login</a>
+        </div>
+        <% } %>
+
         <div>
           <div class="mb-3">
             <h4>Comments <%=`(${article.comments.length})`%></h4>
@@ -56,7 +56,7 @@
           <div>
             <p class="m-0">"<%= comment.content %>"</p>
             <p style="color: rgb(84, 84, 84); font-size: 90%; font-style: italic">
-              <%= comment.fullname %>
+              <%= comment.user.fullname %>
             </p>
           </div>
           <hr class="my-2" />
