--- a/views/adminCreate.ejs
+++ b/views/adminCreate.ejs
@@ -18,7 +18,7 @@
 
     <section class="container">
       <div class="mt-5 shadow p-4 rounded">
-        <form method="post" action="/articulos/" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data">
           <div>
             <h1>Create article</h1>
           </div>
