--- a/views/adminEdit.ejs
+++ b/views/adminEdit.ejs
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <title>Editar artículo</title>
-  </head>
-  <body>
-    <%- include("./partials/navbar.ejs") %>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <title>Edit Article</title>
+</head>
+
+<body>
+  <%- include("./partials/navbar.ejs") %>
 
     <section class="container">
       <div class="mt-5 shadow p-4 rounded">
@@ -23,36 +21,18 @@
           </div>
           <div class="mt-3">
             <label for="title" class="form-label">Title</label>
-            <input
-              value="<%= article.title %>"
-              name="title"
-              type="text"
-              class="form-control"
-              id="title"
-              require
-            />
+            <input value="<%= article.title %>" name="title" type="text" class="form-control" id="title" require />
           </div>
           <div class="mt-3">
             <label for="content" class="form-label">Content</label>
-            <textarea
-              style="height: 300px"
-              name="content"
-              class="form-control"
-              id="content"
-              require
-            >
+            <textarea style="height: 300px" name="content" class="form-control" id="content" require>
             <%= article.content %>
             </textarea>
           </div>
           <div class="mt-3">
             <label for="image" class="form-label">Image</label>
             <input name="image" class="form-control" type="file" id="image" />
-            <img
-              style="max-width: 150px"
-              class="img-fluid mt-2"
-              src="/img/<%= article.image %>"
-              alt="Article image"
-            />
+            <img style="max-width: 150px" class="img-fluid mt-2" src="/img/<%= article.image %>" alt="Article image" />
           </div>
           <div class="mt-3">
             <button id="btnSubmit" type="submit" class="btn btn-success">Modificar</button>
@@ -60,15 +40,14 @@
         </form>
       </div>
       <div class="my-3">
-        <a href="/admin">Volver</a>
+        <a href="/admin">Go Back</a>
       </div>
     </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
 
     <script src="/js/script.js"></script>
-  </body>
+</body>
+
 </html>
