--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,23 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <%- include("./partials/navbar.ejs") %>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <title>Login</title>
+</head>
+
+<body>
+  <%- include("./partials/navbar.ejs") %>
     <div class="container my-5 p-5 shadow bg-white rounded">
       <form method="post" action="/login">
         <h2>Login</h2>
         <div class="my-3">
           <label for="email" class="form-label">Email address</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            aria-describedby="emailHelp"
-            required
-          />
+          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" required />
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
@@ -34,17 +27,18 @@
         <div class="d-flex justify-content-between pt-3">
           <button type="submit" class="btn btn-primary">Log In</button>
           <% if(messages) {%>
-          <p class="text-danger"><%= messages.info %></p>
-          <% } %>
-          <a href="/users/registro" class="btn btn-success">Registrarse</a>
+            <p class="text-danger">
+              <%= messages.info %>
+            </p>
+            <% } %>
+              <a href="/users/registro" class="btn btn-success">Sign Up</a>
         </div>
       </form>
     </div>
     <%- include("partials/footer") %>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
