--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <%- include("./partials/navbar.ejs") %>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+</head>
+
+<body>
+  <%- include("./partials/navbar.ejs") %>
     <div class="container my-5 p-5 shadow bg-white rounded">
       <form method="post">
-        <h2>Checka in</h2>
+        <h2>Sign Up</h2>
         <div class="my-3">
           <label for="name" class="form-label">Full Name</label>
           <input type="text" class="form-control" name="fullname" required />
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            aria-describedby="emailHelp"
-            required
-          />
+          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" required />
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
@@ -41,13 +33,16 @@
           <input type="password" class="form-control" name="confirm-password" required />
         </div>
         <div class="d-flex justify-content-between">
-          <button type="submit" class="btn btn-primary">Bli Medlem</button>
+          <button type="submit" class="btn btn-primary">Sign Up</button>
           <% if(messages) {%>
-          <p class="text-danger"><%= messages.info %></p>
-          <% } %>
+            <p class="text-danger">
+              <%= messages.info %>
+            </p>
+            <% } %>
         </div>
       </form>
     </div>
     <%- include("partials/footer") %>
-  </body>
+</body>
+
 </html>
