--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,32 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <title>Login</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://kit.fontawesome.com/aa122a9d31.js" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <title>Login</title>
-  <%- include("./partials/google.ejs")  %>
-
-</head>
-
-<body>
-  <%- include("./partials/navbar.ejs") %>
+  <body>
+    <%- include("./partials/navbar.ejs") %>
     <div class="container my-5 p-5 shadow bg-white rounded">
       <form method="post" action="/login">
         <h2>Login</h2>
         <div class="my-3">
           <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" required />
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            aria-describedby="emailHelp"
+            required
+          />
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
@@ -28,19 +35,37 @@
         </div>
         <div class="d-flex justify-content-between pt-3">
           <button type="submit" class="btn btn-primary">Log In</button>
+          <a href="/auth/facebook" class="btn btn-info">Iniciar sesión con Facebook</a>
+
+          <!-- <div
+            class="fb-login-button"
+            data-width="500px"
+            data-size=""
+            data-button-type=""
+            data-layout=""
+            data-auto-logout-link="false"
+            data-use-continue-as="false"
+          ></div> -->
           <% if(messages) {%>
-            <p class="text-danger">
-              <%= messages.info %>
-            </p>
-            <% } %>
-              <a href="/users/registro" class="btn btn-success">Sign Up</a>
+          <p class="text-danger"><%= messages.info %></p>
+          <% } %>
+          <a href="/users/registro" class="btn btn-success">Sign Up</a>
         </div>
       </form>
     </div>
     <%- include("partials/footer") %>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-</body>
-
+    <!-- <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v16.0&appId=1429035387913450&autoLogAppEvents=1"
+      nonce="60aJxcUG"
+    ></script> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
