--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,10 @@
         </div>
         <div class="d-flex justify-content-between pt-3">
           <button type="submit" class="btn btn-primary">Log In</button>
-          <a href="/auth/facebook" class="btn btn-info">Iniciar sesión con Facebook</a>
+          <a href="/auth/facebook" class="btn btn-info" style="background-color: #2374e1"
+            >Iniciar sesión con Facebook</a
+          >
+          <a href="/auth/google" class="btn btn-info">Iniciar sesión con Google</a>
 
           <!-- <div
             class="fb-login-button"
